// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Participant {
  address            String              @id
  examParticipations ExamParticipation[]
}

model ExamParticipation {
  id                    String      @id @default(uuid())
  participant           Participant @relation(fields: [participantAddress], references: [address])
  participantAddress    String
  exam                  Exam        @relation(fields: [examAddress], references: [address])
  examAddress           String
  isFinished            Boolean
  hasParticipantStarted Boolean
  score                 Int?
}

model Exam {
  address            String              @id
  name               String?
  symbol             String?
  description        String?
  questions          Question[]
  examParticipations ExamParticipation[]
  creatorAddress     String
}

model Question {
  id          String   @id @default(uuid())
  answers     Answer[]
  text        String
  exam        Exam     @relation(fields: [examAddress], references: [address])
  examAddress String
}

model Answer {
  id         String   @id @default(uuid())
  text       String
  isCorrect  Boolean
  question   Question @relation(fields: [questionId], references: [id])
  questionId String
}
